feet: created all methods to category in controller and service layers.